[package]
name = "humannum"
description = """
    A human friendly format parser for numeric types
"""
license = "MIT/Apache-2.0"
readme = "README.rst"
keywords = ["num", "number", "human", "human-friendly", "parser"]
homepage = "http://github.com/tailhook/humannum"
documentation = "http://tailhook.github.io/humannum/"
version = "0.1.0"
authors = ["paul@colomiets.name"]

[dependencies]
quick-error = "1.0.0"
num-traits = "0.1.36"

[lib]
name = "humannum"
path = "src/lib.rs"

